# taxonomy-generation

./: .gitignore  CHANGELOG.md  README.md  audit_config.yaml  main.py  pyproject.toml
.serena/: project.yml
.serena-cli/: project.yml
.serena/memories/: code_style_conventions.md  project_structure.md  purpose_scope.md  suggested_commands.md  task_completion.md  tech_stack.md
config/: default.yaml
data/prompts_training_data/: lv0_s1.json  lv0_s3.json
docs/: DOCUMENTATION_GUIDE.md  MODULE_INDEX.md  MODULE_README_INVENTORY.md  MODULE_TEMPLATE.md  README_MIGRATION_PLAN.md  README_TEMPLATE.md  audit_procedures.md  functional-blueprint.md  logic-spec.md  policies.md
docs/modules/: cli-interfaces.md  cli-pipeline-integration.md  config-policies.md  cross-cutting-interactions.md  dedup.md  disambiguation.md  entities-core.md  extraction-normalization.md  (+20 more)
metadata/: run.observability.json
prompts/: README.md  registry.yaml
scripts/: audit_level0_run.py  audit_quality_checker.py  audit_report_generator.py  audit_timing_analyzer.py
tests/: README.md  __init__.py  test_acronym.py  test_cli.py  test_config.py  test_context_features.py  test_deduplication.py  test_disambiguation.py  test_entities.py  test_excel_reader.py  test_hierarchy_assembly.py  test_llm.py  test_manifest.py  test_normalization.py  test_normalization_institution_prefix.py  test_observability.py  test_observability_manifest.py  test_one_time_optimization.py  test_orchestration.py  test_phonetic.py  test_s0_raw_extraction.py  test_s1_extraction_normalization.py  test_s1_observability_integration.py  test_s1_output_format.py  test_s2_frequency_filtering.py  test_s2_observability_integration.py  test_s3_token_verification.py  test_similarity.py  test_validation_aggregator.py  test_validation_llm.py  test_validation_processor.py  test_validation_rules.py  test_validation_web.py  test_web_mining.py
(+151 files in other folders)
