[project]
name = "taxonomy"
version = "0.1.0"
description = "Academic taxonomy generation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "polars>=0.20.0",
    "openpyxl>=3.1.0",
    "dspy-ai>=2.4.0",
    "openai>=1.0.0",
    "jellyfish>=1.2.0",
    "python-Levenshtein>=0.20.0",
    "metaphone>=0.6",
    "networkx>=3.0",
    "firecrawl-py>=4.3.6",
    "requests>=2.31.0",
    "langdetect>=1.0.9",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "yml>=0.0.1",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "transformers>=4.56.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "beautifulsoup4>=4.14.0",
    "charset-normalizer>=3.4.3",
    "pdfplumber>=0.11.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["taxonomy*"]
